<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wburles.uk.seriesoftubes.ShopFragment" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <Button android:id="@+id/pay_button"
            android:text="@string/pay_button"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:layout_columnSpan="2"/>
        <TableRow>
            <ImageView android:src="@drawable/bottle"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_weight="1"/>
            <Button android:id="@+id/buy_bottle_button"
                android:text="@string/buy_bottle_button"
                android:layout_height="96dp"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="9"
                android:layout_weight="9"/>
        </TableRow>
        <TableRow>
            <ImageView android:src="@drawable/knife"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_weight="1"/>
            <Button android:id="@+id/buy_knife_button"
                android:text="@string/buy_knife_button"
                android:layout_height="96dp"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="9"
                android:layout_weight="9"/>
        </TableRow>
        <TableRow>
            <ImageView android:src="@drawable/gun"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_weight="1"/>
            <Button android:id="@+id/buy_gun_button"
                android:text="@string/buy_gun_button"
                android:layout_height="96dp"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="9"
                android:layout_weight="9"/>
        </TableRow>
        <TableRow>
            <ImageView android:src="@drawable/chocolate"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_weight="1"/>
            <Button android:id="@+id/buy_chocolate_button"
                android:text="@string/buy_choc_button"
                android:layout_height="96dp"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="9"
                android:layout_weight="9"/>
        </TableRow>
        <TableRow>
            <ImageView android:src="@drawable/meal_deal"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_weight="1"/>
            <Button android:id="@+id/buy_meal_button"
                android:text="@string/buy_meal_button"
                android:layout_height="96dp"
                android:layout_width="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="9"
                android:layout_weight="9"/>
        </TableRow>
    </TableLayout>
</ScrollView>


