<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:src="@drawable/mugger"
        android:layout_width="360dp"
        android:layout_height="200dp"
        android:layout_gravity="center"/>

    <GridLayout android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView android:id="@+id/text_mug_mugger"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_columnWeight="5"
            android:paddingLeft="48dp"
            android:paddingTop="10dp"/>
        <TextView android:id="@+id/text_mug_player"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_columnWeight="5"
            android:paddingLeft="48dp"/>
    </GridLayout>

    <TableLayout android:columnCount="2"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingLeft="24dp" android:paddingRight="24dp">
        <TableRow
            android:layout_gravity="top"
            android:paddingTop="0dp">
            <Button android:id="@+id/button_mug_run"
                android:text="@string/button_run_away"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_weight="0"
                android:layout_gravity="top"/>

            <TextView android:id="@+id/text_mug_run"
                android:layout_weight="@integer/text_weight"
                android:layout_width="match_parent"
                android:layout_column="1"
                android:gravity="top"
                android:layout_gravity="top"
                android:layout_marginTop="0dp"
                android:paddingTop="0dp"
                android:padding="0dp"/>
        </TableRow>
        <TableRow>
            <Button android:id="@+id/button_mug_fight"
                android:text="@string/button_fight"
                android:enabled="false"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_weight="0"
                android:layout_gravity="top"/>
            <TextView android:id="@+id/text_mug_fight"
                android:layout_column="1"
                android:layout_weight="@integer/text_weight"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_gravity="top"/>
        </TableRow>
        <TableRow>
            <Button android:id="@+id/button_mug_boost"
                android:text="@string/button_damage_boost"
                android:enabled="false"
                android:layout_column="0"
                android:layout_width="match_parent"
                android:layout_weight="0"
                android:layout_gravity="top"/>
            <TextView android:id="@+id/text_mug_boost"
                android:layout_column="1"
                android:layout_weight="@integer/text_weight"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_gravity="top"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
